--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,12 +1,27 @@
-app.title=??????? ???????
-app.home=???????
-app.footer=?????????? ?????????? <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
-app.login=????? ???
-user.title=????????????
-user.name=???
-user.email=?????
-user.roles=????
-user.active=????????
-user.registered=???????????????
-meal.title=??? ???
-common.select=???????
+app.title=Подсчет калорий
+app.home=Главная
+app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
+app.login=Зайти как
+user.title=Пользователи
+user.name=Имя
+user.email=Почта
+user.roles=Роли
+user.active=Активный
+user.registered=Зарегистрирован
+meal.title=Моя еда
+meal.filter.fromdate=От даты (включая)
+meal.filter.todate=До даты (включая)
+meal.filter.fromtime=От времени (включая)
+meal.filter.totime=До времени (включая)
+meal.filter=Фильтровать
+meal.add=Добавить еду
+meal.date=Дата
+meal.description=Описание
+meal.calories=Калории
+meal.update=Обновить
+meal.delete=Удалить
+meal.edit=Редактировать
+meal.save=Сохранить
+meal.discard=Отменить
+common.select=Выбрать
+meal.range="Введите калории (10-5000)"
