HW10 without 3task

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -44,3 +44,5 @@ common.appError=Ошибка приложения
 common.confirm=Вы уверены?
 common.save=Сохранить
 common.cancel=Отменить
+common.validation=Ошибка проверки данных
+common.notempty=не должно быть пустым
